samples/_failures_safe/1761529418_df537f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_476eb589.c: In function ‘print_token’:
./samples/SAFE/__tmp_476eb589.c:174:15: error: expected ‘;’ at end of input
  174 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_476eb589.c:174:9: error: expected declaration or statement at end of input
  174 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_476eb589.c:174:9: error: expected declaration or statement at end of input
